@@ -1,0 +1,37 @@
+# Generated by git-ship. See 'git-ship --man' for help or https://github.com/jhthorsen/app-git-ship
+use utf8;
+use ExtUtils::MakeMaker;
+my %WriteMakefileArgs = (
+  NAME           => 'Mojo::Server::DaemonControl',
+  AUTHOR         => 'Jan Henning Thorsen <jhthorsen@cpan.org>',
+  LICENSE        => 'artistic_2',
+  ABSTRACT_FROM  => 'lib/Mojo/Server/DaemonControl.pm',
+  VERSION_FROM   => 'lib/Mojo/Server/DaemonControl.pm',
+  EXE_FILES      => [qw(script/mojodctl)],
+  OBJECT         => '',
+  BUILD_REQUIRES => {},
+  TEST_REQUIRES  => {'Test2::Suite' => '0.000145'},
+  PREREQ_PM      => {'Mojolicious'  => '8.25', 'perl' => 'v5.20.0'},
+  META_MERGE     => {
+    'dynamic_config' => 0,
+    'meta-spec'      => {version => 2},
+    'resources'      => {
+      bugtracker => {web => 'https://github.com/jhthorsen/mojo-server-daemoncontrol/issues'},
+      homepage   => 'https://github.com/jhthorsen/mojo-server-daemoncontrol',
+      repository => {
+        type => 'git',
+        url  => 'https://github.com/jhthorsen/mojo-server-daemoncontrol.git',
+        web  => 'https://github.com/jhthorsen/mojo-server-daemoncontrol',
+      },
+    },
+    'x_contributors' => ['Jan Henning Thorsen'],
+  },
+  test => {TESTS => (-e 'META.yml' ? 't/*.t' : 't/*.t xt/*.t')},
+);
+
+unless (eval { ExtUtils::MakeMaker->VERSION('6.63_03') }) {
+  my $test_requires = delete $WriteMakefileArgs{TEST_REQUIRES};
+  @{$WriteMakefileArgs{PREREQ_PM}}{keys %$test_requires} = values %$test_requires;
+}
+
+WriteMakefile(%WriteMakefileArgs);
