@@ -1,5 +1,5 @@
 # You can install this project with curl -L http://cpanmin.us | perl - https://github.com/jhthorsen/mojo-server-daemoncontrol/archive/master.tar.gz
 requires "perl"        => "5.20.0";
-requires "Mojolicious" => "9.00";
+requires "Mojolicious" => "8.25";
 
 test_requires "Test2::Suite" => "0.000145";
